--- a/index.html
+++ b/index.html
@@ -224,9 +224,9 @@
     <div class="row">
       <col-md-12>
       <div class="box">
-        <input type="name" name="Nombre y Apellido" value="Nombre y Apellido" class="email">
-        <input type="tel" name="Teléfono" value="Teléfono" class="email">
-        <input type="email" name="Email" value="Email" class="email">
+        <input type="name" name="Nombre y Apellido" placeholder="Nombre y Apellido" class="email">
+        <input type="email" name="Email" placeholder="Email" class="email">
+        <textarea name="name" rows="8" cols="80" class="email" placeholder="Escribí tu mensaje"></textarea>
         <input type="submit" name="Enviar" value="Enviar" class="btn-small">
       </div>
     </div>
