--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="container-fluid">
-        <nav id="header" class="navbar navbar-fixed-top">
+        <nav id="header" class="navbar navbar-fixed-top fixed-theme">
           <div class="logo">
           </div>
           <div class="menu-desktop">
@@ -270,8 +270,8 @@
       <a href="#" class="people">Políticas de privacidad</a>
     </div>
   </footer>
+  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
   <script src="js/function.js" charset="utf-8"></script>
   <script src="js/functions.js" charset="utf-8"></script>
-  <script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 </body>
 </html>
