--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <div class="header-top">
             <div data-link="" class="app-menu-burger OSFillParent" href="#" id="b2-Menu">
               <div data-container="" class="app-menu-line"></div>
-              <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
-              <div data-container="" class="app-menu-line OSAutoMarginTop"></div>
+              <div data-container="" class="app-menu-line"></div>
+              <div data-container="" class="app-menu-line"></div>
             </div>
             <div class="logo">
             </div>
@@ -36,7 +36,7 @@
           <div class="center-content-bottom ph" id="b3-Bottom"></div>
         </div>
 
-        <div class="menu">
+        <div class="menu fixed-theme">
           <div class="menu-background" style="cursor: pointer;"></div>
           <div class="app-menu-container">
             <div class="app-menu">
